[package]
name = "rust_webgl"
version = "0.1.0"
authors = ["paul <drawmindmap@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.20"
wasm-bindgen = "0.2.43"

[dependencies.web-sys]
version = "0.3.20"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WheelEvent',
  'Window',
  'console',
]
